--- a/Windows/AddItemPopup.xaml
+++ b/Windows/AddItemPopup.xaml
@@ -12,7 +12,7 @@
         <Button x:Name="FoodButton" Content="Add Food" HorizontalAlignment="Left" Margin="156,240,0,0" VerticalAlignment="Top" Click="FoodButton_Click" Width="152" Height="53" Background="White" BorderThickness="10,10,10,10" BorderBrush="Black" Style="{DynamicResource RoundedButton}" />
         <CheckBox Content="CheckBox" HorizontalAlignment="Left" Margin="1175,155,0,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="ExpiryChoice" HorizontalAlignment="Left" Margin="220,146,0,0" VerticalAlignment="Top" Width="176"/>
-        <TextBox HorizontalAlignment="Left" Height="46" Margin="103,82,0,0" TextWrapping="Wrap" Text="Food Name" VerticalAlignment="Top" Width="105" TextAlignment="Center" Background="{x:Null}" FontSize="22" FontFamily="Acme Gothic" BorderBrush="{x:Null}"/>
-        <TextBox HorizontalAlignment="Left" Margin="121,140,0,0" TextWrapping="Wrap" Text="Expiry Date" VerticalAlignment="Top" Width="69" Background="{x:Null}" BorderBrush="{x:Null}" FontSize="22" FontFamily="Acme Gothic" TextAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Left" Height="46" Margin="108,82,0,0" TextWrapping="Wrap" Text="Food Name" VerticalAlignment="Top" Width="95" TextAlignment="Center" Background="{x:Null}" FontSize="22" FontFamily="Acme Gothic" />
+        <TextBlock HorizontalAlignment="Left" Margin="121,140,0,0" TextWrapping="Wrap" Text="Expiry Date" VerticalAlignment="Top" Width="69" Background="{x:Null}"  FontSize="22" FontFamily="Acme Gothic" TextAlignment="Center"/>
     </Grid>
 </Window>
