--- a/Windows/ItemWindowPopup.xaml
+++ b/Windows/ItemWindowPopup.xaml
@@ -7,11 +7,16 @@
         mc:Ignorable="d"
         Title="ItemWindowPopup" Height="331" Width="667" WindowStyle="None" Background="#FF7B7B7B">
     <Grid x:Name="maingrid">
-        <TextBlock x:Name="FoodName" HorizontalAlignment="Left" Margin="65,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="59" Width="166" FontSize="18" Background="White"/>
-        <TextBlock x:Name="DateString" HorizontalAlignment="Left" Margin="457,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="166" FontSize="18" Background="White"/>
-        <Button x:Name="Consumed_Button" Content="Consumed" HorizontalAlignment="Left" Margin="92,174,0,0" VerticalAlignment="Top" Click="Button_Click" Height="55" Width="112" RenderTransformOrigin="0.396,0.466"/>
-        <Button x:Name="Wasted_Button" Content="Wasted" HorizontalAlignment="Left" Margin="484,174,0,0" VerticalAlignment="Top" Click="Button_Click_1" Width="112" Height="55"/>
+
+        <Button x:Name="Consumed_Button" Content="Consumed" HorizontalAlignment="Left" Margin="92,197,0,0" VerticalAlignment="Top" Click="Button_Click" Height="55" Width="112" RenderTransformOrigin="0.396,0.466"/>
+        <Button x:Name="Wasted_Button" Content="Wasted" HorizontalAlignment="Right" Margin="0,197,71,0" VerticalAlignment="Top" Click="Button_Click_1" Width="112" Height="55"/>
         <Button Content="Close Popup" HorizontalAlignment="Center" Margin="0,273,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
+        <Border BorderBrush="White" BorderThickness="3,3,3,3" Margin="454,76,41,194" CornerRadius="10,10,10,10">
+            <Label x:Name="DateString" VerticalAlignment="Center" Height="60" FontSize="18" Background="{x:Null}" BorderThickness="5,5,5,5" RenderTransformOrigin="0.756,-0.808" HorizontalAlignment="Center" Width="160"/>
+        </Border>
+        <Border BorderBrush="White" BorderThickness="3,3,3,3" Margin="62,76,433,194" CornerRadius="10,10,10,10">
+            <Label x:Name="FoodName" HorizontalAlignment="Left" VerticalAlignment="Center" Height="60" Width="166" FontSize="18" Background="{x:Null}"  BorderThickness="5,5,5,5" UseLayoutRounding="True" Margin="-3,0,0,0"/>
+        </Border>
 
     </Grid>
 </Window>
